--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,8 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  body: MyText
+  title: MyString1
+  body: MyText1
 
 two:
   title: MyString
