--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,7 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+user_one:
+  email: user_one@test.com
+  encrypted_password: 123456
+  admin: true
 # column: value
 #
 two: {}
